force-app/main/default/objects/MC4SF__MC_Subscriber_Activity__c/fields/MC4SF__Text_URL__c.field-meta.xml
<CustomField>
    <fullName>MC4SF__Text_URL__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Text URL</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>