force-app/main/default/objects/MC4SF__MC_Subscriber_Activity__c/fields/MC4SF__Timestamp__c.field-meta.xml
<CustomField>
    <fullName>MC4SF__Timestamp__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Activity Date</label>
    <type>DateTime</type>
</CustomField>