force-app/main/default/objects/MC4SF__MC_Subscriber_Activity__c/fields/MC4SF__Type__c.field-meta.xml
<CustomField>
    <fullName>MC4SF__Type__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Type</label>
    <length>200</length>
    <type>Text</type>
</CustomField>